<resources>
    <string name="app_name">fooding</string>
    <string name="signin_text">지금 바로 함께 하세요!</string>
    <string name="Calendar">Calendar</string>
    <string name="Search">Search</string>
    <string name="Add">Add</string>
    <string name="Chart">Chart</string>
    <string name="MyPage">MyPage</string>
    <string name="시간">시간</string>
    <string name="분류">분류</string>
    <string name="아침">아침</string>
    <string name="점심">점심</string>
    <string name="저녁">저녁</string>
    <string name="간식">간식</string>
    <string name="메모">메모</string>
    <string name="g_value_format">%1$s g</string>
    <string name="mg_value_format">%1$s mg</string>
    <string name="kcal_value_format">%1$s kcal</string>
    <string name="memo_placeholder">간단한 메모를 남겨주세요.(선택)</string>
    <string name="영양성분">영양성분(선택)</string>
    <string name="완료하기">완료하기</string>
    <string name="날짜및시간">날짜 및 시간</string>
    <string name="앨범열기">앨범열기</string>
    <string name="촬영하기">촬영하기</string>
    <string name="hint_time">00:00</string>
    <string name="hint_date">2023–03–06</string>
    <string name="총섭취량">총 섭취량 (g)</string>
    <string name="칼로리">열량 (kcal)</string>
    <string name="탄수화물">탄수화물 (g)</string>
    <string name="단백질">단백질 (g)</string>
    <string name="지방">지방 (g)</string>
    <string name="당류">당류 (g)</string>
    <string name="나트륨">나트륨 (mg)</string>
    <string name="콜레스테롤">콜레스테롤 (mg)</string>
    <string name="포화지방">포화지방 (g)</string>
    <string name="트랜스지방">트랜스지방 (g)</string>
    <string name="_000">000</string>
    <string name="검색해서추가하기">검색해서 추가하기</string>
    <string name="추가하기">추가하기</string>
    <string name="음식이름">음식 이름</string>
    <string name="음식사진">음식사진</string>
    <string name="영양성분검색">영양성분 검색</string>
    <string name="추가하기버튼">추가하기버튼</string>
    <string name="검색하기버튼">검색하기버튼</string>
    <string name="식품이름을입력하세요">식품 이름을 입력하세요</string>
    <string name="먹은음식영양성분">먹은 음식 영양성분</string>
    <string name="nutrition_hint">클릭하여 상세 영양성분을 확인하세요</string>
    <string name="제목">제목</string>
    <string name="촬영된음식사진">촬영된음식사진</string>
    <string name="로그아웃">로그아웃</string>
    <string name="식단기록">식단 기록</string>
    <string name="마이페이지">마이페이지</string>
    <string name="번진행중">번 진행 중</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="목표체중">목표 체중</string>
    <string name="일일목표칼로리">일일 목표 칼로리</string>
    <string name="현재체중">현재 체중</string>
    <string name="수정하기">수정하기</string>
    <string name="오늘섭취한칼로리">오늘 섭취한 칼로리</string>
    <string name="일주일간섭취한칼로리">일주일 간 섭취한 칼로리</string>
    <string name="통계">통계</string>
    <string name="일주일간섭취칼로리">일주일간 섭취한 칼로리 분석</string>
    <string name="오늘섭취영양성분분석">오늘 섭취한 영양성분 분석</string>
</resources>