<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="#FFFFBB33"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/ic_chart" />

        <EditText
            android:id="@+id/text_input_current_wt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/현재체중"
            android:inputType="phone" />

        <EditText
            android:id="@+id/text_input_goal_wt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif"
            android:hint="@string/목표체중"
            android:inputType="phone" />

        <EditText
            android:id="@+id/text_input_goal_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/일일목표칼로리"
            android:inputType="phone" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>