<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addPostViewModel"
            type="com.example.fooding.ui.addpost.AddPostViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/food_img_view"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/add_nutrition_button"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_add_menu"
                app:layout_constraintStart_toEndOf="@+id/text_nutrition"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <Button
                android:id="@+id/add_gallery_img_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="12dp"
                android:text="@string/앨범열기"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/food_img_view" />

            <Button
                android:id="@+id/add_camera_img_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:text="@string/촬영하기"
                app:layout_constraintStart_toEndOf="@+id/add_gallery_img_button"
                app:layout_constraintTop_toBottomOf="@+id/food_img_view" />

            <TextView
                android:id="@+id/text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/날짜및시간"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider5" />

            <EditText
                android:id="@+id/text_input_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_time"
                app:layout_constraintStart_toEndOf="@+id/text_input_date"
                app:layout_constraintTop_toBottomOf="@+id/text_time" />

            <EditText
                android:id="@+id/text_input_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_time" />

            <View
                android:id="@+id/divider"
                android:layout_width="350dp"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_time" />

            <View
                android:id="@+id/divider2"
                android:layout_width="350dp"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_group" />

            <View
                android:id="@+id/divider3"
                android:layout_width="350dp"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_memo" />

            <TextView
                android:id="@+id/text_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/분류"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <RadioGroup
                android:id="@+id/btn_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_category">

                <RadioButton
                    android:id="@+id/btn_breakfast"
                    android:layout_width="65dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/selector_radio_button"
                    android:button="@null"
                    android:checked="true"
                    android:tag="1"
                    android:text="@string/아침"
                    android:textAlignment="center"
                    android:textColor="@drawable/selector_radio_text"
                    android:textSize="11sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/category" />

                <RadioButton
                    android:id="@+id/btn_lunch"
                    android:layout_width="65dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/selector_radio_button"
                    android:button="@null"
                    android:tag="2"
                    android:text="@string/점심"
                    android:textAlignment="center"
                    android:textColor="@drawable/selector_radio_text"
                    android:textSize="11sp"
                    app:layout_constraintStart_toEndOf="@+id/btn_breakfast"
                    app:layout_constraintTop_toBottomOf="@+id/category" />

                <RadioButton
                    android:id="@+id/btn_dinner"
                    android:layout_width="65dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/selector_radio_button"
                    android:button="@null"
                    android:tag="3"
                    android:text="@string/저녁"
                    android:textAlignment="center"
                    android:textColor="@drawable/selector_radio_text"
                    android:textSize="11sp"
                    app:layout_constraintStart_toEndOf="@+id/btn_lunch"
                    app:layout_constraintTop_toBottomOf="@+id/category" />

                <RadioButton
                    android:id="@+id/btn_snack"
                    android:layout_width="65dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/selector_radio_button"
                    android:button="@null"
                    android:tag="4"
                    android:text="@string/간식"
                    android:textAlignment="center"
                    android:textColor="@drawable/selector_radio_text"
                    android:textSize="11sp"
                    app:layout_constraintStart_toEndOf="@+id/btn_dinner"
                    app:layout_constraintTop_toBottomOf="@+id/category" />
            </RadioGroup>

            <TextView
                android:id="@+id/text_memo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/메모"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <EditText
                android:id="@+id/text_input_memo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:hint="@string/memo_placeholder"
                android:text="@={addPostViewModel.memo}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_memo" />

            <TextView
                android:id="@+id/text_nutrition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/영양성분"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <View
                android:id="@+id/divider5"
                android:layout_width="350dp"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_gallery_img_button" />

            <Button
                android:id="@+id/btn_complete"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:enabled="false"
                android:text="@string/완료하기"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nutrition_list_view" />

            <LinearLayout
                android:id="@+id/nutrition_list_view"
                android:layout_width="300dp"
                android:layout_height="20dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/btn_complete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_nutrition_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>