<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="searchViewModel"
            type="com.example.fooding.ui.search.SearchViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/영양성분검색"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/text_input_food"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:background="@color/gray"
            android:hint="@string/식품이름을입력하세요"
            android:inputType="text"
            android:text="@={searchViewModel.foodName}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_food_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_food" />

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:contentDescription="@string/검색하기버튼"
            app:layout_constraintStart_toEndOf="@+id/text_input_food"
            app:layout_constraintTop_toBottomOf="@+id/text_search"
            app:srcCompat="@drawable/ic_search" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>